[package]
name = "comick"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1.74"
clap = { version = "4.4", features = ["derive", "string"] }
fantoccini = "0.19"
futures = "0.3.29"
futures-util = "0.3"
http = "0.2"
reqwest = "0.11"
thiserror = "1.0.50"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
chrono = "0.4"
